WEB-9794: fix filter chip left alignment on mobile

--- a/scss/partials/_filter-bar.scss
+++ b/scss/partials/_filter-bar.scss
@@ -447,6 +447,8 @@
 
       &:before {
         content: "";
+        margin-left: 0;
+        width: 0;
       }
 
       @include breakpoint(desktop) {
